Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -226,3 +226,33 @@ runpm:disable (0), force enable (1), optimus only default (-1) (int)
 
 Если модуль вызывает проблемы, файл /etc/modprobe.d/blacklist.conf можно использовать для блокировки загрузки модуля. Например, чтобы предотвратить автоматическую загрузку модуля nouveau, необходимо добавить строку blacklist nouveau в файл /etc/modprobe.d/blacklist.conf. Это действие требуется, если установлен проприетарный модуль nvidia и модуль nouveau по умолчанию следует отключить.
 >Вы можете изменить файл /etc/modprobe.d/blacklist.conf, который уже существует в системе по умолчанию. Однако предпочтительным методом является создание отдельного файла конфигурации, /etc/modprobe.d/ <module_name> .conf, который будет содержать настройки, специфичные только для данного модуля ядра.
+
+# Информационные файлы и файлы устройств
+Команды lspci, lsusb и lsmod действуют как внешние интерфейсы для чтения информации об оборудовании, хранящейся в операционной системе. Такая информация хранится в специальных файлах в каталогах /proc и /sys. Эти каталоги являются точками монтирования файловых систем, не присутствующих в разделе устройства, а только в пространстве ОЗУ, используемом ядром для хранения конфигурации времени выполнения и информации о запущенных процессах. Такие файловые системы не предназначены для обычного хранения файлов, поэтому они называются псевдофайловыми системами и существуют только во время работы системы. Каталог /proc содержит файлы с информацией о запущенных процессах и аппаратных ресурсах. Некоторые из важных файлов в /proc для проверки оборудования:
+
+/proc/cpuinfo
+>Выводит подробную информацию о процессорах, обнаруженных операционной системой.
+
+/proc/interrupts
+>Список номеров прерываний на устройство ввода-вывода для каждого процессора.
+
+/proc/ioports
+>Перечисляет используемые в настоящее время зарегистрированные диапазоны портов ввода/вывода.
+
+/proc/dma
+>Перечисляет используемые зарегистрированные каналы DMA (прямой доступ к памяти).
+
+Файлы в каталоге /sys имеют те же роли, что и файлы в /proc. Однако каталог /sys предназначен для хранения информации об устройстве и данных ядра, относящихся к оборудованию, в то время как каталог /proc также содержит информацию о различных структурах данных ядра, включая запущенные процессы и конфигурацию. 
+
+Другой каталог, напрямую связанный с устройствами в стандартной системе Linux, - это /dev. Каждый файл внутри / dev связан с системным устройством, особенно с устройствами хранения. Устаревший жесткий диск IDE, например, при подключении к первому каналу IDE материнской платы представлен файлом /dev/hda. Каждый раздел на этом диске будет идентифицирован как /dev/hda1, /dev/hda2 до последнего найденного раздела.
+
+Съемные устройства обрабатываются подсистемой udev, которая создает соответствующие устройства в /dev. Ядро Linux фиксирует событие обнаружения оборудования и передает его процессу udev, который затем идентифицирует устройство и динамически создает соответствующие файлы в /dev, используя заранее определенные правила.
+
+В текущих дистрибутивах Linux udev отвечает за идентификацию и настройку устройств, уже присутствующих во время включения машины (обнаружение холодного подключения), и устройств, идентифицированных во время работы системы (обнаружение горячего подключения). Udev использует SysFS, псевдофайловую систему для информации, связанной с оборудованием, смонтированной в /sys.
+
+>Hotplug - это термин, используемый для обозначения обнаружения и настройки устройства во время работы системы, например, когда вставлено USB-устройство. Ядро Linux поддерживает функции горячего подключения, начиная с версии 2.6, что позволяет большинству системных шин (PCI, USB и т. д.) запускать события горячего подключения при подключении или отключении устройства.
+
+При обнаружении новых устройств udev ищет подходящее правило в заранее определенных правилах, хранящихся в каталоге /etc/udev/rules.d/. Наиболее важные правила предусмотрены дистрибутивом, но для конкретных случаев могут быть добавлены новые.
+
+# Устройства хранения данных
+
