Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -259,3 +259,26 @@ runpm:disable (0), force enable (1), optimus only default (-1) (int)
 В Linux устройства хранения обычно называются блочными устройствами, поскольку данные считываются с этих устройств в блоках буферизованных данных с разными размерами и позициями. Каждое блочное устройство идентифицируется файлом в каталоге /dev, имя которого зависит от типа устройства (IDE, SATA, SCSI и т. д.) И его разделов. Например, CD/DVD и гибкие диски будут иметь свои имена, указанные в /dev соответственно: привод CD/DVD, подключенный ко второму каналу IDE, будет идентифицирован как /dev/hdc (/dev /hda и /dev /hdb зарезервированы для главного и ведомого устройств на первом канале IDE), а старый дисковод для гибких дисков будет идентифицируется как /dev/fd0, /dev/fd1 и т. д.  
 
 Начиная с версии ядра Linux 2.4 и выше, большинство устройств хранения теперь идентифицируются как устройства SCSI, независимо от их типа оборудования. Блочные устройства IDE, SSD и USB будут иметь префикс sd. Для дисков IDE будет использоваться префикс sd, но третья буква будет выбрана в зависимости от того, является ли диск ведущим или ведомым (в первом канале IDE ведущим будет sda, а ведомым будет sdb). Разделы перечислены в числовом виде. Пути /dev/sda1, /dev/sda2 и т. д. используются для первого и второго разделов блочного устройства, идентифицированного первым, а /dev/sdb1, /dev/sdb2 и т. д. используются для идентификации первого и второго разделов блочного устройства, идентифицированного вторым. Исключением из этого шаблона являются карты памяти (SD-карты) и устройства NVMe (SSD, подключенные к шине PCI Express). Для SD-карт пути /dev/mmcblk0p1, /dev/mmcblk0p2 и т. д. Используются для первого и второго разделов устройства, идентифицированного первым и /dev/mmcblk1p1, /dev/mmcblk1p2 и т. д. используется для идентификации первого и второго разделов устройства, идентифицированного вторым. Устройства NVMe получают префикс nvme, например /dev/nvme0n1p1 и /dev/nvme0n1p2.
+
+# Упражнения для закрепления
+
+1. Предположим, что операционная система не может загрузиться после добавления в систему второго диска SATA. Зная, что все детали нисправны, какова возможная причина этой ошибки?
+
+2. Предположим, вы хотите убедиться, что внешняя видеокарта, подключенная к шине PCI вашего недавно приобретенного настольного компьютера, действительно является той, которая рекламируется производителем, но открытие корпуса компьютера приведет к аннулированию гарантии. Какую команду можно использовать для вывода сведений о видеокарте, обнаруженных операционной системой?
+
+3. Следующая строка является частью вывода, созданного командой lspci:
+```
+03:00.0 RAID bus controller: LSI Logic / Symbios Logic MegaRAID SAS 2208 [Thunderbolt] (rev 05)
+```
+Какую команду следует выполнить, чтобы определить модуль ядра, используемый для этого конкретного устройства?
+
+4. Системный администратор хочет попробовать другие параметры для модуля ядра Bluetooth без перезагрузки системы. Однако любая попытка выгрузить модуль с помощью команды modprobe -r bluetooth приводит к следующей ошибке:
+```
+modprobe: FATAL: Module bluetooth is in use.
+```
+Какова возможная причина этой ошибки?
+
+
+# Упражнения на размышления
+
+1. Нередко можно найти устаревшие машины в производственных средах, например, когда какое-то оборудование использует устаревшее соединение для связи с управляющим компьютером, что заставляет обратить особое внимание на некоторые особенности этих старых машин. Например, некоторые серверы x86 со старой прошивкой BIOS не загружаются, если клавиатура не обнаружена. Как можно избежать этой конкретной проблемы?
