--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -267,18 +267,17 @@ runpm:disable (0), force enable (1), optimus only default (-1) (int)
 2. Предположим, вы хотите убедиться, что внешняя видеокарта, подключенная к шине PCI вашего недавно приобретенного настольного компьютера, действительно является той, которая рекламируется производителем, но открытие корпуса компьютера приведет к аннулированию гарантии. Какую команду можно использовать для вывода сведений о видеокарте, обнаруженных операционной системой?
 
 3. Следующая строка является частью вывода, созданного командой lspci:
-```
-03:00.0 RAID bus controller: LSI Logic / Symbios Logic MegaRAID SAS 2208 [Thunderbolt] (rev 05)
-```
+```03:00.0 RAID bus controller: LSI Logic / Symbios Logic MegaRAID SAS 2208 [Thunderbolt] (rev 05)```
 Какую команду следует выполнить, чтобы определить модуль ядра, используемый для этого конкретного устройства?
 
 4. Системный администратор хочет попробовать другие параметры для модуля ядра Bluetooth без перезагрузки системы. Однако любая попытка выгрузить модуль с помощью команды modprobe -r bluetooth приводит к следующей ошибке:
-```
-modprobe: FATAL: Module bluetooth is in use.
-```
+```modprobe: FATAL: Module bluetooth is in use.```
 Какова возможная причина этой ошибки?
 
 
 # Упражнения на размышления
 
 1. Нередко можно найти устаревшие машины в производственных средах, например, когда какое-то оборудование использует устаревшее соединение для связи с управляющим компьютером, что заставляет обратить особое внимание на некоторые особенности этих старых машин. Например, некоторые серверы x86 со старой прошивкой BIOS не загружаются, если клавиатура не обнаружена. Как можно избежать этой конкретной проблемы?
+2. Операционные системы, построенные на ядре Linux, также доступны для широкого спектра компьютерных архитектур, отличных от x86, например, для одноплатных компьютеров, основанных на архитектуре ARM. Внимательный пользователь заметит отсутствие команды lspci на таких машинах, как Raspberry Pi. Какая разница с машинами x86 оправдывает это отсутствие?
+3. Многие сетевые маршрутизаторы имеют порт USB, позволяющий подключать внешнее устройство, например жесткий диск USB. Поскольку в большинстве из них используется операционная система на базе Linux, как внешний жесткий диск USB будет называться в каталоге /dev/, если в маршрутизаторе нет других обычных блочных устройств?
+4. В 2018 году была обнаружена аппаратная уязвимость, известная как Meltdown. Поражает практически все процессоры многих архитектур. Последние версии ядра Linux могут сообщить, уязвима ли текущая система. Как получить эту информацию?
