--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -294,14 +294,14 @@ modprobe: FATAL: Module bluetooth is in use.
 
 В этом уроке рассматриваются общие концепции того, как ядро ​​Linux обрабатывает аппаратные ресурсы, в основном в архитектуре x86. В уроке рассматриваются следующие темы:
 
-0 Как параметры, определенные в утилитах настройки BIOS или UEFI, могут влиять на способ взаимодействия операционной системы с оборудованием.
-0 Как использовать инструменты, предоставляемые стандартной системой Linux, для получения информации об оборудовании.
-0 Как определить постоянные и съемные устройства хранения в файловой системе.
+0. Как параметры, определенные в утилитах настройки BIOS или UEFI, могут влиять на способ взаимодействия операционной системы с оборудованием.
+0. Как использовать инструменты, предоставляемые стандартной системой Linux, для получения информации об оборудовании.
+0. Как определить постоянные и съемные устройства хранения в файловой системе.
 
 
 Были рассмотрены следующие команды и процедуры:
 
-0 Команды для проверки обнаруженного оборудования: lspci и lsusb. 
-0 Команды для управления модулями ядра: lsmod и modprobe. 
-0 Специальные файлы, относящиеся к оборудованию: файлы, находящиеся в каталоге /dev/ или в псевдофайловых системах в /proc/ и /sys/.
+0. Команды для проверки обнаруженного оборудования: lspci и lsusb. 
+0. Команды для управления модулями ядра: lsmod и modprobe. 
+0. Специальные файлы, относящиеся к оборудованию: файлы, находящиеся в каталоге /dev/ или в псевдофайловых системах в /proc/ и /sys/.
 
