Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -296,7 +296,7 @@ modprobe: FATAL: Module bluetooth is in use.
 
 * Как параметры, определенные в утилитах настройки BIOS или UEFI, могут влиять на способ взаимодействия операционной системы с оборудованием.
 * Как использовать инструменты, предоставляемые стандартной системой Linux, для получения информации об оборудовании.
-8 Как определить постоянные и съемные устройства хранения в файловой системе.
+* Как определить постоянные и съемные устройства хранения в файловой системе.
 
 
 Были рассмотрены следующие команды и процедуры:
