Update 101.1 Урок 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.1 Determine and configure hardware settings/101.1 Урок 1.md
@@ -305,3 +305,48 @@ modprobe: FATAL: Module bluetooth is in use.
 * Команды для управления модулями ядра: lsmod и modprobe. 
 * Специальные файлы, относящиеся к оборудованию: файлы, находящиеся в каталоге /dev/ или в псевдофайловых системах в /proc/ и /sys/.
 
+
+# Ответы на упражнения для закрепления
+
+1. Предположим, что операционная система не может загрузиться после добавления в систему второго диска SATA. Зная, что все детали нисправны, какова возможная причина этой ошибки?
+
+Порядок загрузочных устройств должен быть настроен в программе настройки BIOS, в противном случае BIOS может не запустить загрузчик.
+
+2. Предположим, вы хотите убедиться, что внешняя видеокарта, подключенная к шине PCI вашего недавно приобретенного настольного компьютера, действительно является той, которая рекламируется производителем, но открытие корпуса компьютера приведет к аннулированию гарантии. Какую команду можно использовать для вывода сведений о видеокарте, обнаруженных операционной системой?
+
+Команда lspci отобразит подробную информацию обо всех устройствах, подключенных в данный момент к шине PCI.
+
+3. Следующая строка является частью вывода, созданного командой lspci:
+```
+03:00.0 RAID bus controller: LSI Logic / Symbios Logic MegaRAID SAS 2208 [Thunderbolt] (rev 05)
+```
+Какую команду следует выполнить, чтобы определить модуль ядра, используемый для этого конкретного устройства?
+
+Команда lspci -s 03: 00.0 -v или lspci -s 03: 00.0 -k
+
+4. Системный администратор хочет попробовать другие параметры для модуля ядра Bluetooth без перезагрузки системы. Однако любая попытка выгрузить модуль с помощью команды modprobe -r bluetooth приводит к следующей ошибке:
+```
+modprobe: FATAL: Module bluetooth is in use.
+```
+Какова возможная причина этой ошибки?
+
+Модуль bluetooth используется запущенным процессом.
+
+
+# Ответы на упражнения для размышления
+
+1. Нередко можно найти устаревшие машины в производственных средах, например, когда какое-то оборудование использует устаревшее соединение для связи с управляющим компьютером, что заставляет обратить особое внимание на некоторые особенности этих старых машин. Например, некоторые серверы x86 со старой прошивкой BIOS не загружаются, если клавиатура не обнаружена. Как можно избежать этой конкретной проблемы?
+
+Утилита настройки BIOS позволяет отключить блокировку компьютера, если клавиатура не найдена.
+
+2. Операционные системы, построенные на ядре Linux, также доступны для широкого спектра компьютерных архитектур, отличных от x86, например, для одноплатных компьютеров, основанных на архитектуре ARM. Внимательный пользователь заметит отсутствие команды lspci на таких машинах, как Raspberry Pi. Какая разница с машинами x86 оправдывает это отсутствие?
+
+В отличие от большинства машин x86, компьютер на базе ARM, такой как Raspberry Pi, не имеет шины PCI, поэтому команда lspci бесполезна.
+
+3. Многие сетевые маршрутизаторы имеют порт USB, позволяющий подключать внешнее устройство, например жесткий диск USB. Поскольку в большинстве из них используется операционная система на базе Linux, как внешний жесткий диск USB будет называться в каталоге /dev/, если в маршрутизаторе нет других обычных блочных устройств?
+
+Современные ядра Linux идентифицируют жесткие диски USB как устройства SATA, поэтому соответствующий файл будет / dev / sda, поскольку в системе нет других обычных блочных устройств.
+
+4. В 2018 году была обнаружена аппаратная уязвимость, известная как Meltdown. Поражает практически все процессоры многих архитектур. Последние версии ядра Linux могут сообщить, уязвима ли текущая система. Как получить эту информацию?
+
+В файле /proc/cpuinfo есть строка, показывающая известные ошибки для соответствующего процессора, например ошибки: cpu_meltdown.
