Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -50,3 +50,66 @@ GPT
 ограничения на размер диска нет, а максимальное количество разделов ограничено 
 только самой операционной системой. Это чаще встречается на более современных 
 машинах, которые используют UEFI вместо старого BIOS ПК.
+
+Во время задач системного администрирования весьма вероятно, что вы обнаружите, что обе схемы используются, поэтому важно знать, как использовать инструменты, связанные с каждой из них, для создания, удаления или изменения разделов.
+
+
+# Управление разделами MBR с помощью FDISK
+
+Стандартная утилита для управления разделами MBR в Linux - fdisk. Это интерактивная утилита с меню. Чтобы использовать его, введите fdisk, а затем имя устройства, соответствующего диску, который вы хотите редактировать. Например, команда
+```
+# fdisk /dev/sda
+```
+будет редактировать таблицу разделов первого устройства, подключенного к SATA (sda) в системе. Имейте в виду, что вам нужно указать устройство, соответствующее физическому диску, а не одному из его разделов (например, / dev / sda1).
+>Все операции с дисками в этом уроке должны выполняться от имени пользователя root (системного администратора) или с правами root с помощью sudo.
+
+При вызове fdisk покажет приветствие, затем предупреждение и будет ждать ваших команд.
+```
+# fdisk /dev/sda
+Welcome to fdisk (util-linux 2.33.1).
+Changes will remain in memory only, until you decide to write them.
+Be careful before using the write command.
+
+Command (m for help):
+```
+Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но ничего не будет записано на диск, если вы не используете команду write (w). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу w. Чтобы выйти из fdisk без сохранения изменений, используйте команду q.
+>При этом никогда не следует практиковаться на важном диске, поскольку всегда есть риски. Вместо этого используйте запасной внешний диск или USB-накопитель.
+
+
+# Вывод текущей таблицы разделов
+
+Команда p используется для печати текущей таблицы разделов. Результат будет примерно таким:
+```
+Command (m for help): p
+Disk /dev/sda: 111.8 GiB, 120034123776 bytes, 234441648 sectors
+Disk model: CT120BX500SSD1
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+I/O size (minimum/optimal): 512 bytes / 512 bytes
+Disklabel type: dos
+Disk identifier: 0x97f8fef5
+
+Device     Boot     Start       End   Sectors   Size Id Type
+/dev/sda1            4096 226048942 226044847 107.8G 83 Linux
+/dev/sda2       226048944 234437550   8388607     4G 82 Linux swap / Solaris
+```
+Вот значение каждого столбца:
+Device
+Устройство, назначенное разделу.
+Boot
+Показывает, является ли раздел загрузочным.
+Start
+Сектор, в котором начинается раздел.
+End
+Сектор, в котором заканчивается раздел.
+Sectors
+Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
+Size
+Размер раздела в формате, удобном для чтения. В приведенном выше примере значения указаны в гигабайтах.
+Id
+Числовое значение, представляющее тип раздела.
+Type
+Описание типа раздела.
+
+
+# Основной или расширеный разделы
