Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -3,8 +3,7 @@
 | Сертификат :  | LPIC-1                                      |
 |:--------------|:--------------------------------------------|
 | Версия :      | 5                                           |
-| Тема :        | 104 устройства, файловые системы Linux,     |
-                  стандарт иерархии файловых систем           
+| Тема :        | 104 устройства, файловые системы Linux, стандарт иерархии файловых систем |                           
 | Цель:         | 104.1 Создание разделов и файловых систем   |
 | Урок:         | 1 из 1                                      |
 
