--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -94,21 +94,21 @@ Device     Boot     Start       End   Sectors   Size Id Type
 ```
 Вот значение каждого столбца:
 Device
-  Устройство, назначенное разделу.
+    Устройство, назначенное разделу.
 Boot
-  Показывает, является ли раздел загрузочным.
+    Показывает, является ли раздел загрузочным.
 Start
-  Сектор, в котором начинается раздел.
+    Сектор, в котором начинается раздел.
 End
-  Сектор, в котором заканчивается раздел.
+    Сектор, в котором заканчивается раздел.
 Sectors
-  Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
+    Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
 Size
-  Размер раздела в формате, удобном для чтения. В приведенном выше примере значения указаны в гигабайтах.
-Id
-  Числовое значение, представляющее тип раздела.
-Type
-  Описание типа раздела.
+    Размер раздела в формате, удобном для чтения. В приведенном выше примере значения указаны в гигабайтах.
+`Id`
+    Числовое значение, представляющее тип раздела.
+`Type`
+    Описание типа раздела.
 
 
 # Основной или расширеный разделы
