Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -17,8 +17,8 @@
 
 Обычно каждый раздел рассматривается операционной системой как отдельный «диск», 
 даже если все они находятся на одном физическом носителе. В системах Windows им 
-присваиваются такие буквы, как C: (исторически основной диск), D: и так далее. В Linux
-каждый раздел привязан к каталогу в /dev, например /dev/sda1 или /dev/sda2.
+присваиваются такие буквы, как `C:` (исторически основной диск), `D:` и так далее. В Linux
+каждый раздел привязан к каталогу в `/dev`, например `/dev/sda1` или `/dev/sda2`.
 
 В этом уроке вы узнаете, как создавать, удалять, восстанавливать и изменять размер
 разделов с помощью трех наиболее распространенных утилит (fdisk, gdisk и parted), 
@@ -55,12 +55,12 @@ GPT
 
 # Управление разделами MBR с помощью FDISK
 
-Стандартная утилита для управления разделами MBR в Linux - fdisk. Это интерактивная утилита с меню. Чтобы использовать его, введите fdisk, а затем имя устройства, соответствующего диску, который вы хотите редактировать. Например, команда
+Стандартная утилита для управления разделами MBR в Linux - `fdisk`. Это интерактивная утилита с меню. Чтобы использовать его, введите `fdisk`, а затем имя устройства, соответствующего диску, который вы хотите редактировать. Например, команда
 ```
 # fdisk /dev/sda
 ```
-будет редактировать таблицу разделов первого устройства, подключенного к SATA (sda) в системе. Имейте в виду, что вам нужно указать устройство, соответствующее физическому диску, а не одному из его разделов (например, / dev / sda1).
->Все операции с дисками в этом уроке должны выполняться от имени пользователя root (системного администратора) или с правами root с помощью sudo.
+будет редактировать таблицу разделов первого устройства, подключенного к SATA (sda) в системе. Имейте в виду, что вам нужно указать устройство, соответствующее физическому диску, а не одному из его разделов (например, `/dev/sda1`).
+>Все операции с дисками в этом уроке должны выполняться от имени пользователя root (системного администратора) или с правами root с помощью `sudo`.
 
 При вызове fdisk покажет приветствие, затем предупреждение и будет ждать ваших команд.
 ```
@@ -71,13 +71,13 @@ Be careful before using the write command.
 
 Command (m for help):
 ```
-Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но ничего не будет записано на диск, если вы не используете команду write (w). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу w. Чтобы выйти из fdisk без сохранения изменений, используйте команду q.
+Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но ничего не будет записано на диск, если вы не используете команду write (`w`). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу `w`. Чтобы выйти из `fdis`k без сохранения изменений, используйте команду `q`.
 >При этом никогда не следует практиковаться на важном диске, поскольку всегда есть риски. Вместо этого используйте запасной внешний диск или USB-накопитель.
 
 
 # Вывод текущей таблицы разделов
 
-Команда p используется для печати текущей таблицы разделов. Результат будет примерно таким:
+Команда `p` используется для печати текущей таблицы разделов. Результат будет примерно таким:
 ```
 Command (m for help): p
 Disk /dev/sda: 111.8 GiB, 120034123776 bytes, 234441648 sectors
@@ -93,17 +93,17 @@ Device     Boot     Start       End   Sectors   Size Id Type
 /dev/sda2       226048944 234437550   8388607     4G 82 Linux swap / Solaris
 ```
 Вот значение каждого столбца:
-Device
+`Device`
     Устройство, назначенное разделу.
-Boot
+`Boot`
     Показывает, является ли раздел загрузочным.
-Start
+`Start`
     Сектор, в котором начинается раздел.
-End
+`End`
     Сектор, в котором заканчивается раздел.
-Sectors
+`Sectors`
     Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
-Size
+`Size`
     Размер раздела в формате, удобном для чтения. В приведенном выше примере значения указаны в гигабайтах.
 `Id`
     Числовое значение, представляющее тип раздела.
