--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -93,9 +93,9 @@ Device     Boot     Start       End   Sectors   Size Id Type
 /dev/sda2       226048944 234437550   8388607     4G 82 Linux swap / Solaris
 ```
 Вот значение каждого столбца:
-`Device`
+0. `Device`
     Устройство, назначенное разделу.
-`Boot`
+0. `Boot`
     Показывает, является ли раздел загрузочным.
 `Start`
     Сектор, в котором начинается раздел.
