Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -94,10 +94,9 @@ Device     Boot     Start       End   Sectors   Size Id Type
 ```
 Вот значение каждого столбца:
 * `Device` - Устройство, назначенное разделу.
-`Boot`  Показывает, является ли раздел загрузочным.
-  `Start` * Сектор, в котором начинается раздел.
-`End`
-* Сектор, в котором заканчивается раздел.
+* `Boot` - Показывает, является ли раздел загрузочным.
+    `Start` - Сектор, в котором начинается раздел.
+* `End` - Сектор, в котором заканчивается раздел.
 `Sectors`
 * Общее количество секторов в разделе. Умножьте его на размер сектора, чтобы получить размер раздела в байтах.
 `Size`
