Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -104,3 +104,26 @@ Device     Boot     Start       End   Sectors   Size Id Type
 
 
 # Основной или расширеный разделы
+
+На MBR-диске может быть 2 основных типа разделов: *primary* и *extended*. Как мы уже говорили, у вас может быть только 4 основных раздела на диске, и если вы хотите сделать диск «загрузочным», первый раздел должен быть основным. 
+
+Один из способов обойти это ограничение - создать расширенный раздел, который действует как контейнер для *logical* разделов. У вас может быть, например, первичный раздел, расширенный раздел, занимающий оставшуюся часть дискового пространства, и пять логических разделов внутри него.
+
+Для такой операционной системы, как Linux, первичные и расширенные разделы обрабатываются одинаково, поэтому нет «преимуществ» использования одного над другим.
+
+
+# Создание раздела
+
+Чтобы создать раздел, используйте команду `n`. По умолчанию разделы будут созданы в начале незанятого пространства на диске. Вам будет предложено указать тип раздела (основной или расширенный), первый и последний сектор.
+
+Для первого сектора вы обычно можете принять значение по умолчанию, предложенное `fdisk`, если вам не нужен раздел, начинающийся с определенного сектора. Вместо того, чтобы указывать последний сектор, вы можете указать размер, за которым следуют буквы `K`, `M`, `G`, `T` или `P` (Kilo, Mega, Giga, Tera или Peta). Итак, если вы хотите создать раздел размером 1 GB, вы можете указать `+1GB` в качестве `Last sector` (последнего сектора), и `fdisk` изменит размер раздела соответствующим образом. См. Этот пример для создания основного раздела:
+```
+Command (m for help): n
+Partition type
+   p   primary (0 primary, 0 extended, 4 free)
+   e   extended (container for logical partitions)
+Select (default p): p
+Partition number (1-4, default 1): 1
+First sector (2048-3903577, default 2048): 2048
+Last sector, +/-sectors or +/-size{K,M,G,T,P} (2048-3903577, default 3903577): +1G
+```
