Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -127,3 +127,64 @@ Partition number (1-4, default 1): 1
 First sector (2048-3903577, default 2048): 2048
 Last sector, +/-sectors or +/-size{K,M,G,T,P} (2048-3903577, default 3903577): +1G
 ```
+
+
+# Проверка на незанятое пространство
+
+Если вы не знаете, сколько свободного места на диске, вы можете использовать команду `F`, чтобы показать нераспределенное пространство, например:
+```
+Command (m for help): F
+Unpartitioned space /dev/sdd: 881 MiB, 923841536 bytes, 1804378 sectors
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+
+  Start     End Sectors  Size
+2099200 3903577 1804378  881M
+```
+
+
+# Удаление разделов
+
+Чтобы удалить раздел, используйте команду `d`. `fdisk` спросит у вас номер раздела, который вы хотите удалить, если на диске нет только одного раздела. В этом случае этот раздел будет выбран и немедленно удален.
+
+Имейте в виду, что если вы удалите расширенный раздел, все логические разделы внутри него также будут удалены.
+
+
+# Обратите внимание на разрыв!
+
+Имейте в виду, что при создании нового раздела с помощью fdisk максимальный размер будет ограничен максимальным объемом непрерывного нераспределенного пространства на диске. Скажем, например, что у вас есть следующая карта разделов:
+```
+Device     Boot   Start     End Sectors  Size Id Type
+/dev/sdd1          2048 1050623 1048576  512M 83 Linux
+/dev/sdd2       1050624 2099199 1048576  512M 83 Linux
+/dev/sdd3       2099200 3147775 1048576  512M 83 Linux
+```
+Затем вы удаляете раздел 2 и проверяете наличие свободного места:
+```
+Command (m for help): F
+Unpartitioned space /dev/sdd: 881 MiB, 923841536 bytes, 1804378 sectors
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+
+  Start     End Sectors  Size
+1050624 2099199 1048576  512M
+3147776 3903577  755802  369M
+```
+Adding up the size of the unallocated space, in theory we have 881 MB available. But see what happens when we try to create a 700 MB partition:
+```
+Command (m for help): n
+Partition type
+   p   primary (2 primary, 0 extended, 2 free)
+   e   extended (container for logical partitions)
+Select (default p): p
+Partition number (2,4, default 2): 2
+First sector (1050624-3903577, default 1050624):
+Last sector, +/-sectors or +/-size{K,M,G,T,P} (1050624-2099199, default 2099199): +700M
+Value out of range.
+```
+Это происходит потому, что наибольшее непрерывное незанятое пространство на диске - это блок размером 512 МБ, принадлежащий разделу 2. Ваш новый раздел не может «достучаться» до раздела 3, чтобы использовать часть нераспределенного пространства после него.
+
+
+# Изменение типа раздела
+
+
