Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -170,7 +170,7 @@ Sector size (logical/physical): 512 bytes / 512 bytes
 1050624 2099199 1048576  512M
 3147776 3903577  755802  369M
 ```
-Adding up the size of the unallocated space, in theory we have 881 MB available. But see what happens when we try to create a 700 MB partition:
+Если сложить размер нераспределенного пространства, теоретически у нас будет 881 МБ. Но посмотрим, что произойдет, когда мы попытаемся создать раздел размером 700 МБ:
 ```
 Command (m for help): n
 Partition type
@@ -187,4 +187,49 @@ Value out of range.
 
 # Изменение типа раздела
 
+Иногда вам может потребоваться изменить тип раздела, особенно при работе с дисками, которые будут использоваться в других операционных системах и платформах. Это делается с помощью команды `t`, за которой следует номер раздела, который вы хотите изменить. 
+
+Тип раздела должен быть указан с помощью соответствующего шестнадцатеричного кода, и вы можете увидеть список всех допустимых кодов, используя команду `l`.
+
+Не путайте тип раздела с используемой на нем файловой системой. Хотя сначала между ними существовала связь, сегодня вы не можете предполагать, что это правда. Например, раздел Linux может содержать любую файловую систему Linux, такую как *ext4* или *ReiserFS*.
+>Разделы Linux относятся к типу 83 (Linux). Разделы подкачки имеют тип 82 (Linux Swap).
+
+
+# Настройка разделов GPT с помощью GDISK
+
+Утилита `gdisk` является эквивалентом `fdisk` при работе с дисками с разделами GPT. Фактически, интерфейс смоделирован по образцу `fdisk` с интерактивной подсказкой и такими же (или очень похожими) командами.
+
+
+# Вывод текущей таблицы разделов
+
+Команда `p` используется для печати текущей таблицы разделов. Результат будет примерно таким:
+```
+Command (? for help): p
+Disk /dev/sdb: 3903578 sectors, 1.9 GiB
+Model: DataTraveler 2.0
+Sector size (logical/physical): 512/512 bytes
+Disk identifier (GUID): AB41B5AA-A217-4D1E-8200-E062C54285BE
+Partition table holds up to 128 entries
+Main partition table begins at sector 2 and ends at sector 33
+First usable sector is 34, last usable sector is 3903544
+Partitions will be aligned on 2048-sector boundaries
+Total free space is 1282071 sectors (626.0 MiB)
+
+Number  Start (sector)    End (sector)  Size       Code  Name
+   1            2048         2099199   1024.0 MiB  8300  Linux filesystem
+   2         2623488         3147775   256.0 MiB   8300  Linux filesystem
+```
+
+С самого начала мы замечаем несколько разных вещей:
+* Каждый диск имеет уникальный идентификатор диска (GUID). Это 128-битное шестнадцатеричное число, которое назначается случайным образом при создании таблицы разделов. GUID можно использовать для определения того, какие файловые системы монтировать во время загрузки (и где), избавляя от необходимости использовать для этого путь к устройству (например, `/dev/sdb`).
+* Видите фразу Partition table holds up to 128 entries? Правильно, на GPT-диске может быть до 128 разделов. Благодаря этому нет необходимости в *primary* и *extended* разделах.
+* Свободное пространство указано в последней строке, поэтому нет необходимости в эквиваленте команды `F` из `fdisk`.
+
+
+# Создание раздела
+
+Команда для создания раздела - `n`, как и в `fdisk`. Основное отличие состоит в том, что помимо номера раздела и первого и последнего секторов (или размера) вы также можете указать тип раздела во время создания. Разделы GPT поддерживают гораздо больше типов, чем MBR. Вы можете проверить список всех поддерживаемых типов с помощью команды `L`.
+
+
+# Удаление раздела
 
